--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "smoothscroll": "^0.4.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue3-lazyload": "^0.2.4-beta",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
